# resumer

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md
app/serverless/: .gitlab-ci.yml
app/serverless/html2pdf/: .gitignore  .sample.env  Dockerfile  README.md  html2pdf.js  main.py  package.json
app/serverless/latex2pdf/: Cargo.toml  Dockerfile  Dockerfile_amzn2  bundle.sh  latex2pdf.py
app/serverless/latex2pdf/lib/: latex2pdf.py
app/serverless/latex2pdf/lib/pdflatex/: __init__.py  pdflatex.py
app/serverless/latex2pdf/src/: lib.rs  main.rs  test.rs
