[package]
name = "latex2pdf"
version = "0.1.0"
authors = ["Chuma Umenze <hello@chumaumenze.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1"
log = "^0.4"
simple_logger = "^1"
tectonic = "0.1.12"
base64 = "0.12.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
